deleted Kaggle API, only from local or URL, untested, mistakes are corrected

--- a/files_for_the_project/localization/RU.txt
+++ b/files_for_the_project/localization/RU.txt
@@ -1,1 +1,49 @@
-Файл с русской локализацией
+0: Добро пожаловать в систему анализа медицинских данных!
+1: Разработчики: Соколов А.В., Кожемякин А.А., Шиханова Е.В., Чайка Н.В.
+2: Главное меню
+5: Выход
+6: Импорт/Экспорт данных
+7: Просмотр таблицы
+8: Визуализация данных
+9: Ошибка: введите число от 0 до 3
+10: Ошибка: данные не загружены!
+11: Успешно загружено записей: {}
+12: Работа программы завершена
+13: Спасибо за использование нашего ПО!
+14: Ошибка инициализации компонентов
+15: Работа прервана пользователем
+16: Критическая ошибка
+17: Выберите пункт меню
+20: === Меню управления данными ===
+21: Введите полный путь к файлу (CSV/XLSX)
+22: Ошибка: файл {} не найден
+23: Неподдерживаемый формат файла
+24: Данные успешно загружены!
+25: Ошибка чтения файла
+26: === Загрузка с Kaggle ===
+27: Пример URL: https://www.kaggle.com/datasets/username/dataset-name
+28: Введите URL датасета
+29: Некорректный формат URL
+30: Идет загрузка данных...
+31: В архиве не найдены CSV файлы
+32: Данные успешно загружены с Kaggle!
+33: Ошибка загрузки
+34: Введите путь для сохранения
+35: Введите имя файла (без расширения)
+36: Выберите формат (CSV/XLSX)
+37: Неподдерживаемый формат
+38: Файл успешно сохранен: {}
+39: Ошибка сохранения
+40: Отсутствуют обязательные столбцы: {}
+41: === Меню таблицы ===
+42: Всего записей
+43: Показать следующие записи
+44: Результаты фильтрации
+45: Найдено записей
+46: Нет данных по условиям
+47: Ошибка фильтрации
+48: === Меню визуализации ===
+49: Введите столбец для оси X
+50: Введите столбец для оси Y
+51: Указанные столбцы не существуют
+52: Ошибка построения графика
