Visualization with less 200 data, numeric checker

--- a/files_for_the_project/localization/RU.txt
+++ b/files_for_the_project/localization/RU.txt
@@ -45,5 +45,5 @@
 48: === Меню визуализации ===
 49: Введите столбец для оси X
 50: Введите столбец для оси Y
-51: Указанные столбцы не существуют
-52: Ошибка построения графика
+51: Ошибка: указанные столбцы не найдены
+52: Ошибка при построении графика
