Added neural network cancer prediction, mutation type prediction hasnt added yet. Neural networks just created pickle files with models

--- a/files_for_the_project/localization/RU.txt
+++ b/files_for_the_project/localization/RU.txt
@@ -47,3 +47,7 @@
 50: Введите столбец для оси Y
 51: Ошибка: указанные столбцы не найдены
 52: Ошибка при построении графика
+54: Прогнозирование типа рака
+55: Прогнозирование типа мутации
+56: Точность модели
+57: Модель сохранена
