New ENG Localization, some problems with other codes' localization

--- a/files_for_the_project/localization/RU.txt
+++ b/files_for_the_project/localization/RU.txt
@@ -51,3 +51,5 @@
 55: Прогнозирование типа мутации
 56: Точность модели
 57: Модель сохранена
+100: Выберите язык
+101: Неверный ввод. Попробуйте снова.
